# drmaa_cpp

./: .gitignore  CMakeLists.txt  README.md
include/drmaa/: drmaa.hpp  pipeline.hpp  watcher.hpp
src/: CMakeLists.txt  drmaa.cpp  pipeline.cpp  watcher.cpp
tests/: CMakeLists.txt  example.c  test.cpp
